--- a/public/index.html
+++ b/public/index.html
@@ -16,13 +16,13 @@
 <body>
     <form id="chat">
 
-        <input type="text" name="username" placeholder="Digite seu usuário">
+        <input type="text" name="username" placeholder="Enter your username">
 
         <div class="messages"></div>
 
-        <input type="text" name="message" placeholder="Digite sua mensagem">
+        <input type="text" name="message" placeholder="Enter your message">
 
-        <button type="submit">Enviar</button>
+        <button type="submit">Send</button>
 
     </form>
 
@@ -31,7 +31,7 @@
         const socket = io('http://localhost:3000')
 
         function renderMessage(message) {
-            $('.messages').append('<div class="message"><strong>' + message.author + '</strong>: ' + message.message + '</div>')
+            $('.messages').append('<div class="message"><strong>' + message.author + ':</strong> ' + message.message + '</div>')
         }
 
         socket.on('previousMessages', function(messages) {
