--- a/public/index.html
+++ b/public/index.html
@@ -30,21 +30,19 @@
 
         const socket = io('http://localhost:3000')
 
-        function renderMessage(message) {
-            $('.messages').append('<div class="message"><strong>' + message.author + ':</strong> ' + message.message + '</div>')
+        function renderMessage({ author, message }) {
+            $('.messages').append('<div class="message"><strong>' + author + ':</strong> ' + message + '</div>')
         }
 
-        socket.on('previousMessages', function(messages) {
-            for (message of messages) {
-                renderMessage(message)
-            }
+        socket.on('previousMessages', messages => {
+            for (message of messages) renderMessage(message)
         })
 
-        socket.on('receivedMessage', function(message) {
+        socket.on('receivedMessage', message => {
             renderMessage(message)
         })
 
-        $('#chat').submit(function (e) {
+        $('#chat').submit( e => {
             e.preventDefault()
 
             const author = $('input[name="username"]').val()
@@ -52,8 +50,8 @@
 
             if (author.length && message.length) {
                 const messageObject = {
-                    author: author,
-                    message: message
+                    author,
+                    message
                 }
 
                 renderMessage(messageObject)
