--- a/public/index.html
+++ b/public/index.html
@@ -1,66 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <title>Chat</title>
 
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.3/socket.io.js" integrity="sha512-Jr0UIR/Q8MUX+93zjDOhuDUKLqJZObtwpkLJQcR9qMaLgL0thet39IORuavUaZFkZ8a4ktrUsKPM9mf5LWMduA==" crossorigin="anonymous"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
+      integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.3/socket.io.js"
+      integrity="sha512-Jr0UIR/Q8MUX+93zjDOhuDUKLqJZObtwpkLJQcR9qMaLgL0thet39IORuavUaZFkZ8a4ktrUsKPM9mf5LWMduA=="
+      crossorigin="anonymous"
+    ></script>
 
-    <link rel="stylesheet" href="styles.css">
-</head>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
 
-<body>
+  <body>
     <form id="chat">
+      <input type="text" name="username" placeholder="Enter your username" />
 
-        <input type="text" name="username" placeholder="Enter your username">
+      <div class="messages"></div>
 
-        <div class="messages"></div>
+      <input type="text" name="message" placeholder="Enter your message" />
 
-        <input type="text" name="message" placeholder="Enter your message">
-
-        <button type="submit">Send</button>
-
+      <button type="submit">Send</button>
     </form>
 
     <script type="text/javascript">
+      const socket = io("http://localhost:3000");
 
-        const socket = io('http://localhost:3000')
+      function renderMessage({ author, message }) {
+        $(".messages").append(
+          '<div class="message"><strong>' +
+            author +
+            ":</strong> " +
+            message +
+            "</div>"
+        );
+      }
 
-        function renderMessage({ author, message }) {
-            $('.messages').append('<div class="message"><strong>' + author + ':</strong> ' + message + '</div>')
+      socket.on("previousMessages", (messages) => {
+        for (message of messages) renderMessage(message);
+      });
+
+      socket.on("receivedMessage", (message) => {
+        renderMessage(message);
+      });
+
+      $("#chat").submit((e) => {
+        e.preventDefault();
+
+        const author = $('input[name="username"]').val();
+        const message = $('input[name="message"]').val();
+
+        if (author.length && message.length) {
+          const messageObject = {
+            author,
+            message,
+          };
+
+          renderMessage(messageObject);
+
+          socket.emit("sendMessage", messageObject);
         }
-
-        socket.on('previousMessages', messages => {
-            for (message of messages) renderMessage(message)
-        })
-
-        socket.on('receivedMessage', message => {
-            renderMessage(message)
-        })
-
-        $('#chat').submit( e => {
-            e.preventDefault()
-
-            const author = $('input[name="username"]').val()
-            const message = $('input[name="message"]').val()
-
-            if (author.length && message.length) {
-                const messageObject = {
-                    author,
-                    message
-                }
-
-                renderMessage(messageObject)
-
-                socket.emit('sendMessage', messageObject)
-            }
-        })
+      });
     </script>
-
-</body>
-
+  </body>
 </html>
